Import of STEVAN/Class-C3-0.04 from CPAN.
gitpan-cpan-distribution: Class-C3
gitpan-cpan-version:      0.04
gitpan-cpan-path:         STEVAN/Class-C3-0.04.tar.gz
gitpan-cpan-author:       STEVAN
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for Perl extension Class::C3.
 
+0.04 - Thurs, Sept 29, 2004
+    - changed NEXT::METHOD::foo to next::method
+        - added more tests as well
+
 0.03 - Wed, Sept 28, 2005
     - added the NEXT::METHOD psuedo package for method
       redispatching along the C3 linearization
