--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Revision history for Perl extension Class::C3.
 
+0.05 - Mon, Nov 14, 2005
+    - added caching to next::method, courtesy of quicksilver
+      and mst over at #dbi-class
+        - added next::method edge case test 
+        - added next::method & NEXT test
+
 0.04 - Thurs, Sept 29, 2004
     - changed NEXT::METHOD::foo to next::method
         - added more tests as well
