--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 Revision history for Perl extension Class::C3.
 
-0.06 - 
+0.07 - Wed, Nov 23, 2005
+    * all bugs found by, and fixes provided by Matt S. Trout *
+    - fixed issue caused when module is imported more than once
+    - fixed subtle bug in how next::method is calculated
+        - added test for this
+        
+    - added util/visualize_c3.pl tool, which visualizes C3 
+      dispatch order using GraphViz
+
+0.06 - Tues, Nov 15, 2005
     - added Sub::Name to dependencies (even though it is
       just for the tests)
     - removed OS X resource fork which slipped into the tar.gz
