--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Revision history for Perl extension Class::C3.
 
+0.09 - Fri, Dec 30, 2005
+    - this is actually the proper version of 0.08, I forgot
+      to check in some modifications, and so they didn't get
+      included in my upload. 
+
 0.08 - Wed, Dec 28, 2005
     - adjusted &_remove_method_dispatch_table to be more 
       discriminating about what it deletes. Thanks to 
@@ -7,8 +12,8 @@ Revision history for Perl extension Class::C3.
     - tweaked &_merge to avoid un-needed looping. Thanks to 
       Audrey Tang for this fix.
     - added better support for calling next::method within 
-      an eval BLOCK. Thanks to Justin Guenther for this patch
-      and test.
+      an eval BLOCKs and anon-subroutines. Thanks to Justin 
+      Guenther for this patch and test.
 
 0.07 - Wed, Nov 23, 2005
     * all bugs found by, and fixes provided by Matt S. Trout *
