--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 Revision history for Perl extension Class::C3.
 
+0.11 Thurs. Feb 23, 2006
+    - added some more tests for edge cases
+    - removed INIT, you must explicitly call &initialize now
+        - added docs explaining this
+        - altered tests as needed
+    - moved the C3 algorithm to Algorithm::C3 and added 
+      that as a dependency to this module
+    - added docs to explain the "next::method in anon-sub" issue
+        - suggestions/solutions/patches welcome :)
+    - bumped the Scalar::Util version requirement back down
+      to 1.10, apparently the newer version has some issues          
+
 0.10 - Wed, Feb 8, 2006
     - removed the Sub::Name and NEXT dependencies and 
       made the test just skip if they are not present
