--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 Revision history for Perl extension Class::C3.
 
+0.12 Tues. July 18, 2006
+    - clarifying docs for &initialize (thanks jcs)
+    - applying patch from Robert Norris to add 
+      next::can() and maybe::next::method() 
+      functionality which allows safe probing of 
+      the presence of the next method
+      
+
 0.11 Thurs. Feb 23, 2006
     - added some more tests for edge cases
     - removed INIT, you must explicitly call &initialize now
