--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Revision history for Perl extension Class::C3.
 
+0.15_02 Sun, Apr 15, 2007
+    - Fix for overloading to method name string,
+       from Ittetsu Miyazaki.
+    - Supports Class::C3::XS
+
 0.15_01 Fri, Apr 13, 2007
     - Supports bleadperl + c3 patches (experimental)
 
