--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for Perl extension Class::C3.
 
+0.15_03 Tue, Apr 17, 2007
+    - New c3.patch, improves threads compat and
+      mem mgmt.
+
 0.15_02 Sun, Apr 15, 2007
     - Fix for overloading to method name string,
        from Ittetsu Miyazaki.
