Import of BLBLACK/Class-C3-0.15_04 from CPAN.
gitpan-cpan-distribution: Class-C3
gitpan-cpan-version:      0.15_04
gitpan-cpan-path:         BLBLACK/Class-C3-0.15_04.tar.gz
gitpan-cpan-author:       BLBLACK
gitpan-cpan-maturity:     developer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Revision history for Perl extension Class::C3.
 
+    - Patch not included directly anymore
+
 0.15_03 Tue, Apr 17, 2007
     - New c3.patch, improves threads compat and
       mem mgmt.
