--- a/README
+++ b/README
@@ -20,20 +20,24 @@ This module requires these other modules and libraries:
 Additionally, this module will optionally take advantage of
 these if installed:
 
-	Class::C3::XS 0.01_01
+	Class::C3::XS 0.01_06
 
-SPECIAL NOTE FOR 0.15_01
+SPECIAL NOTE FOR 0.15_04
 
 To try this with the experimental perl core c3 patch,
-download a recent copy perl-current:
+download the most recent copy perl-current:
 
-http://mirrors.develooper.com/perl/APC/perl-current-snap/perl-current@30943.tar.bz2
+http://mirrors.develooper.com/perl/APC/perl-current-snap/
 
-apply the enclosed c3.patch, and install this perl:
+Apply the latest C3 patch from:
+
+http://www.dtmf.com/c3-subgen.patch
+
+Then:
 
 sh Configure -Dusedevel -Dprefix=/where/I/want/it -d -e && make && make test && make install
 
-then try your C3-using software against this perl + Class::C3 0.15_01.
+then try your C3-using software against this perl + Class::C3 0.15_04.
 
 COPYRIGHT AND LICENCE
 
