Import of BLBLACK/Class-C3-0.15_05 from CPAN.
gitpan-cpan-distribution: Class-C3
gitpan-cpan-version:      0.15_05
gitpan-cpan-path:         BLBLACK/Class-C3-0.15_05.tar.gz
gitpan-cpan-author:       BLBLACK
gitpan-cpan-maturity:     developer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 Revision history for Perl extension Class::C3.
 
-    - Patch not included directly anymore
+0.15_05 Thurs, Apr 19, 2007
+    - Patch is in the latest perl-current now,
+      and this dev release assumes 5.9.5 has the patch
 
 0.15_03 Tue, Apr 17, 2007
     - New c3.patch, improves threads compat and
