Import of BLBLACK/Class-C3-0.18 from CPAN.
gitpan-cpan-distribution: Class-C3
gitpan-cpan-version:      0.18
gitpan-cpan-path:         BLBLACK/Class-C3-0.18.tar.gz
gitpan-cpan-author:       BLBLACK
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::C3.
 
+0.18 Sat, May 12, 2007
+    - Just bumped XS version requirement
+
 0.17 Tues, May 8, 2007
     - Remove Build.PL from the distribution
 
