Import of BLBLACK/Class-C3-0.19 from CPAN.
gitpan-cpan-distribution: Class-C3
gitpan-cpan-version:      0.19
gitpan-cpan-path:         BLBLACK/Class-C3-0.19.tar.gz
gitpan-cpan-author:       BLBLACK
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::C3.
 
+0.19 Mon, Jun 4, 2007
+    - Added new goto tests, bumped XS version req
+
 0.18 Sat, May 12, 2007
     - Just bumped XS version requirement
 
