--- a/README
+++ b/README
@@ -2,6 +2,7 @@ NAME
     Class::C3 - A pragma to use the C3 method resolution order algortihm
 
 SYNOPSIS
+        # NOTE - DO NOT USE Class::C3 directly as a user, use MRO::Compat instead!
         package A;
         use Class::C3;
         sub hello { 'A::hello' }
@@ -44,6 +45,11 @@ DESCRIPTION
     This is pragma to change Perl 5's standard method resolution order from
     depth-first left-to-right (a.k.a - pre-order) to the more sophisticated
     C3 method resolution order.
+
+    NOTE: YOU SHOULD NOT USE THIS MODULE DIRECTLY - The feature provided is
+    integrated into perl version >= 5.9.5, and you should use MRO::Compat
+    instead, which will use the core implementation in newer perls, but
+    fallback to using this implementation on older perls.
 
   What is C3?
     C3 is the name of an algorithm which aims to provide a sane method
