--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::C3.
 
+0.23 Sat, Jun 19, 2010
+    - Fix various documentation problems (Martin Becker).
+
 0.22 Fri, Jan 29, 2010
     - Add note that people should be using MRO::Compat rather than
       Class::C3 directly.
@@ -40,9 +43,9 @@ Revision history for Perl extension Class::C3.
 
 0.12 Tues, July 18, 2006
     - clarifying docs for &initialize (thanks jcs)
-    - applying patch from Robert Norris to add 
-      next::can() and maybe::next::method() 
-      functionality which allows safe probing of 
+    - applying patch from Robert Norris to add
+      next::can() and maybe::next::method()
+      functionality which allows safe probing of
       the presence of the next method
 
 0.11 Thurs, Feb 23, 2006
@@ -50,33 +53,33 @@ Revision history for Perl extension Class::C3.
     - removed INIT, you must explicitly call &initialize now
         - added docs explaining this
         - altered tests as needed
-    - moved the C3 algorithm to Algorithm::C3 and added 
+    - moved the C3 algorithm to Algorithm::C3 and added
       that as a dependency to this module
     - added docs to explain the "next::method in anon-sub" issue
         - suggestions/solutions/patches welcome :)
     - bumped the Scalar::Util version requirement back down
-      to 1.10, apparently the newer version has some issues          
+      to 1.10, apparently the newer version has some issues
 
 0.10 - Wed, Feb 8, 2006
-    - removed the Sub::Name and NEXT dependencies and 
+    - removed the Sub::Name and NEXT dependencies and
       made the test just skip if they are not present
-    - bumped the Scalar::Util version requirement up 
+    - bumped the Scalar::Util version requirement up
       (the newest version tends to work the best across
       different platforms)
 
 0.09 - Fri, Dec 30, 2005
     - this is actually the proper version of 0.08, I forgot
       to check in some modifications, and so they didn't get
-      included in my upload. 
+      included in my upload.
 
 0.08 - Wed, Dec 28, 2005
-    - adjusted &_remove_method_dispatch_table to be more 
-      discriminating about what it deletes. Thanks to 
+    - adjusted &_remove_method_dispatch_table to be more
+      discriminating about what it deletes. Thanks to
       Matt S. Trout for this fix.
-    - tweaked &_merge to avoid un-needed looping. Thanks to 
+    - tweaked &_merge to avoid un-needed looping. Thanks to
       Audrey Tang for this fix.
-    - added better support for calling next::method within 
-      an eval BLOCKs and anon-subroutines. Thanks to Justin 
+    - added better support for calling next::method within
+      an eval BLOCKs and anon-subroutines. Thanks to Justin
       Guenther for this patch and test.
 
 0.07 - Wed, Nov 23, 2005
@@ -84,8 +87,8 @@ Revision history for Perl extension Class::C3.
     - fixed issue caused when module is imported more than once
     - fixed subtle bug in how next::method is calculated
         - added test for this
-        
-    - added util/visualize_c3.pl tool, which visualizes C3 
+
+    - added util/visualize_c3.pl tool, which visualizes C3
       dispatch order using GraphViz
 
 0.06 - Tues, Nov 15, 2005
@@ -100,7 +103,7 @@ Revision history for Perl extension Class::C3.
 0.05 - Mon, Nov 14, 2005
     - added caching to next::method, courtesy of quicksilver
       and mst over at #dbi-class
-        - added next::method edge case test 
+        - added next::method edge case test
         - added next::method & NEXT test
 
 0.04 - Thurs, Sept 29, 2004
@@ -115,15 +118,15 @@ Revision history for Perl extension Class::C3.
 0.02 - Mon, Aug 8, 2005
     - code refactoring
         - many comments added
-    - added many more tests 
+    - added many more tests
         - most of the tests from Perl6::MetaModel moved over
-        - tested loading modules with `use` as well as the 
+        - tested loading modules with `use` as well as the
           inline package definition
     - added optional 'c3' pragma
         - this is not installed and can be found in opt/
-    - added `uninitialize` function to remove C3 dispatch ordering 
+    - added `uninitialize` function to remove C3 dispatch ordering
         - added tests for this
-    - added `reinitialize` function to reload C3 dispatch ordering     
+    - added `reinitialize` function to reload C3 dispatch ordering
         - added tests for this
 
 0.01 - Sun, Aug 7, 2005
