--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension Class::C3.
 
+0.23_01 (trial release for smoking of the req_xs branch)
+    - Require Class::C3::XS on 5.8 perls if a working compiler is found
+
 0.23 Sat, Jun 19, 2010
     - Fix various documentation problems (Martin Becker).
 
