--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 Revision history for Perl extension Class::C3.
 
-0.23_01 (trial release for smoking of the req_xs branch)
+0.24 Sat, May 12, 2012
     - Require Class::C3::XS on 5.8 perls if a working compiler is found
 
 0.23 Sat, Jun 19, 2010
