--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Revision history for Perl extension Class::C3.
 
+0.25 Thu, July 4, 2013
+    - Drop compatibility from 5.6.2 to 5.6.0
+    - Pod typo fixes (RT#77453, RT#85357)
+    - Only ask for Devel::Hide on perls where it will be actually used
+      (RT#81106)
+    - Fix SYNOPSIS to actually be executable (RT#78327)
+
 0.24 Sat, May 12, 2012
     - Require Class::C3::XS on 5.8 perls if a working compiler is found
 
