--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    Class::C3 - A pragma to use the C3 method resolution order algortihm
+    Class::C3 - A pragma to use the C3 method resolution order algorithm
 
 SYNOPSIS
         # NOTE - DO NOT USE Class::C3 directly as a user, use MRO::Compat instead!
@@ -55,13 +55,13 @@ DESCRIPTION
     C3 is the name of an algorithm which aims to provide a sane method
     resolution order under multiple inheritance. It was first introduced in
     the langauge Dylan (see links in the "SEE ALSO" section), and then later
-    adopted as the prefered MRO (Method Resolution Order) for the new-style
+    adopted as the preferred MRO (Method Resolution Order) for the new-style
     classes in Python 2.3. Most recently it has been adopted as the
     'canonical' MRO for Perl 6 classes, and the default MRO for Parrot
     objects as well.
 
   How does C3 work.
-    C3 works by always preserving local precendence ordering. This
+    C3 works by always preserving local precedence ordering. This
     essentially means that no class will appear before any of its
     subclasses. Take the classic diamond inheritance pattern for instance:
 
@@ -115,10 +115,10 @@ FUNCTIONS
         proper C3 method resolution order.
 
     initialize
-        This must be called to initalize the C3 method dispatch tables, this
-        module will not work if you do not do this. It is advised to do this
-        as soon as possible after loading any classes which use C3. Here is
-        a quick code example:
+        This must be called to initialize the C3 method dispatch tables,
+        this module will not work if you do not do this. It is advised to do
+        this as soon as possible after loading any classes which use C3.
+        Here is a quick code example:
 
           package Foo;
           use Class::C3;
@@ -222,7 +222,7 @@ CAVEATS
     But there are still caveats, so here goes ...
 
     Use of "SUPER::".
-        The idea of "SUPER::" under multiple inheritance is ambigious, and
+        The idea of "SUPER::" under multiple inheritance is ambiguous, and
         generally not recomended anyway. However, its use in conjuntion with
         this module is very much not recommended, and in fact very
         discouraged. The recommended approach is to instead use the supplied
